multistrap (2.1.4) experimental; urgency=low

  * Add support for multiple cross-toolchains in the chroot

 -- Neil Williams <codehelp@debian.org>  Fri, 30 Apr 2010 18:11:16 +0100

multistrap (2.1.3) experimental; urgency=low

  * Fix armel.conf to specify the right sources.

 -- Neil Williams <codehelp@debian.org>  Sun, 25 Apr 2010 09:35:28 +0100

multistrap (2.1.2) experimental; urgency=low

  * Add support to avoid running preinst scripts and
     always ignore the bash preinst which does not respect
     DEBIAN_FRONTEND=noninteractive 
  * fix handling of omitrequired and configsh when empty
  * add force-yes when using noauth
  * split the package list even if using only spaces, not commas
  * Add support for compressing the filesystem into a tarball.
  * Add support for reinstalling packages known to fail due to preinst
    problems.
  * Add a simple C file to test the compiler inside the chroot
  * sort duplicate sources list entries and use dedicated sources list
    files

 -- Neil Williams <codehelp@debian.org>  Wed, 21 Apr 2010 15:23:23 +0100

multistrap (2.1.1) experimental; urgency=low

  * Add --simulate mode for cascading configuration testing.
  * Split out the POD - not needed in the runtime script.
  * Add cascading configuration to support standard Emdebian cross
    architectures.

 -- Neil Williams <codehelp@debian.org>  Sat, 17 Apr 2010 22:25:45 +0100

multistrap (2.1.0) experimental; urgency=low

  * Experimental branch to replace pbuilder support in Crush. 
  * Drop emsandbox and use experimental multistrap.
  * Add initial crosschroot.conf for multistrap support.
  * Add device-table.pl helper - internal support to follow.
  * Add explicit support for running preinst scripts in native mode.

 -- Neil Williams <codehelp@debian.org>  Wed, 14 Apr 2010 20:54:44 +0100

emdebian-rootfs (2.0.9) unstable; urgency=low

  * Fix typos in translated strings.
  * Allow empty keyring values.