@@ -2,7 +2,7 @@
 include=/usr/share/multistrap/crosschroot.conf
 omitrequired=false
 configscript=
-setupscript=
+setupscript=/usr/share/multistrap/setcrossarch.sh
 debootstrap=Debian Base Toolchains
 aptsources=Debian Toolchains
 tarballname=pdebuild-cross.tgz
